base/ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myreadings-ui
  annotations:
    argocd.argoproj.io/sync-wave: "3"
  labels:
    app.kubernetes.io/name: myreadings-ui
    app.kubernetes.io/part-of: myreadings
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myreadings-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myreadings-ui
        app.kubernetes.io/part-of: myreadings
    spec:
      containers:
        - name: myreadings-ui
          image: quay.io/too-common-name/myreadings-ui:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: nginx-config
          configMap:
            name: myreadings-ui-nginx
