base/ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myreadings-ui
  labels:
    app.kubernetes.io/name: myreadings-ui
    app.kubernetes.io/part-of: myreadings
spec:
  selector:
    app.kubernetes.io/name: myreadings-ui
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
